rust/macros/tests/invalid/target/debug/deps/comma_sep_rs-9167837c7fe245fc.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libcomma_sep_rs-9167837c7fe245fc.rmeta: comma-sep.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/comma_sep_rs-9167837c7fe245fc.d: comma-sep.rs Cargo.toml

comma-sep.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
